# tokenization-shapes-embeddings

./: .gitignore  README.md  architecture_control.py  bpbl_evaluation.py  build_dataset.py  embedding_analysis.py  extract_best.py  iso_data_scaling.py  prepare.py  pyproject.toml  search_results.json  shared.py  train.py
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-data-pipeline/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-RESEARCH.md  deferred-items.md
.planning/phases/02-tokenizer-baseline/: 02-01-SUMMARY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-architecture-search/: 03-03-SUMMARY.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/05-definitive-d3-structural-advantage-experiments/: 05-UAT.md
experiments/: exp3_bpbl.py  exp3b_bpbl_robust.py  exp4_embedding.py  exp5_iso_data.py  exp6_shared_arch_iso_data.py
experiments/results/: bpbl_results_robust.json  iso_data_results.json  iso_data_results_arch_comparison.json
paper/: DRAFT.md  OUTLINE.md  fixed_architecture_ablation.json  fixed_architecture_ablation.md  run_fixed_arch_ablation.py
paper/latex/: Makefile  generate_figures.py  main.tex  references.bib
src/: build_dataset.py  prepare.py  validate_dataset.py
tests/: conftest.py  test_baseline.py  test_pipeline.py  test_search.py  test_tokenizer.py
