[project]
name = "autoresearch-arabic"
version = "0.1.0"
description = "Arabic harakat experiment: tokenization and architecture co-design for diacritized Arabic"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "datasets>=3.0.0",
    "mlx>=0.30.0",
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "regex>=2025.7.34",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
